# Quant-data

./: .gitignore  README.md  example_data.json  pyproject.toml  requirements.txt  t_.json  update.ps1  update.txt
Results/: Cointegration_two_pairs.html  example_data.json
artifacts/: store_results_v.json
artifacts/cointegration/: results_(0, 500).parquet  results_(500, 1000).parquet
artifacts/cointegration/optimize_results/: (0, 500).parquet  (500, 1000).parquet
artifacts/mv/: results_(0, 500).parquet  results_(500, 1000).parquet
docs/: README.md
docs/results/: (0, 2000).html  (760, 1020)dict_keys(['momentum_trending']).html  (760, 1020)dict_keys(['mv']).html  results.json
docs/results/cointegration/: (1000, 1255).html  (500, 755).html  (755, 905).html
docs/results/momentum_trending/: (1255, 1405).html  (1755, 1905).html  (755, 905).html
docs/results/mv/: (2255, 2405).html
examples/: example.py  run.py
results/: (500, 755).html  README.md
src/Quant_Bot/: Backtester_Overview.py  Filters.py  Market_Analysis.py
src/quant_backtester/: __init__.py  backtester_overview.py  data_filter.py  market_filters_analysis.py  run.py  strategies.py
src/quant_backtester.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
