[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'quant_backtester'
version = '0.1.0'
description = 'Quant Research Backtesting Framework'
authors = [{name = 'Varun Kannan'}]
readme = 'README.md'
requires-python = '>=3.9'
dependencies = [
    'numpy',
    'pandas',
    'alpaca',
    'optuna',
    'pathlib',
    'yfinance',
    'plotly',
    'vectorbt'
]

[tool.setuptools]
package-dir = {'' = 'src' }

[tool.setuptools.packages.find]
where = ['src']